shouldve fixed website not looking good on native 1920x1080 monitors and removed footer, need to fix the about spacing from bottom of page too tired to do now

--- a/styles.css
+++ b/styles.css
@@ -106,13 +106,7 @@
      font-family: wadiaslogan;
      src: url(IKARRG__.TTF);
 }
-@media screen and (max-width: 1600px) {
 
-    #welcometext{
-        margin-left: -100px;
-    }
-
-}
  html{
      scroll-behavior: smooth;
 }
